Fix for the hamburger menu "div" element being white on IOS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -323,10 +323,11 @@ main {
 .hamburger {
     display: none;
     cursor: pointer;
-    background: var(--glass-bg);
+    background: transparent;
     padding: 10px;
     border-radius: 8px;
     backdrop-filter: blur(10px);
+    /* Possible fix for the hamburger menu being white on IOS */
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
